View Issue Details

IDProjectCategoryView StatusLast Update
0023904Open CASCADEOCCT:DRAWpublic2013-12-19 13:56
Reporterkgv Assigned Tokgv  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2008 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0023904: Multiple warning on Windows x86_64 target concerning WinAPI usage
DescriptionThere are several warnings which should be fixed.
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0024088 closedbugmaster Unsafe window handle management in Draw using GetWindowLong 

Activities

kgv

2013-04-16 13:04

developer   ~0024152

Patch is ready for review in CR23904 branch

san

2013-04-16 16:03

developer   ~0024161

Branch CR23904 reviewed without remarks, ready for testing.

mkv

2013-04-25 16:14

tester   ~0024276

Dear BugMaster,

Branch CR23904 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 3af9db62e0cba03ea7c113486bd2d4840c8b71fb


Number of compiler warnings:

occt component :
Linux: 2 (2 on master)
Windows: 0 (11 on master)

products component :
Linux: 0 (0 on master)
Windows: 64 (64 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 366061876 / 366580792
Total CPU difference: 44179.70000000121 / 54394.54000000041

Testing on Windows:
Total MEMORY difference: 418696800 / 419739056
Total CPU difference: 36940.125 / 34594.453125

There are not serious differences in images found by testdiff.

abv

2013-04-25 17:39

manager   ~0024279

That is not true:
> Windows: 0 (11 on master)

bugmaster

2013-04-26 15:16

administrator   ~0024290

Dear MKV,

Please retest CR23904

mkv

2013-05-21 16:18

tester   ~0024452

Dear BugMaster,

Branch CR23904 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 3af9db62e0cba03ea7c113486bd2d4840c8b71fb

Number of compiler warnings:

occt component :
Linux: 2 (2 on master)
Windows: 11 (11 on master)

products component :
Linux: 0 (0 on master)
Windows: 64 (64 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 366061876 / 366580792
Total CPU difference: 44179.70000000121 / 54394.54000000041

Testing on Windows:
Total MEMORY difference: 418696800 / 419739056
Total CPU difference: 36940.125 / 34594.453125

There are not differences in images found by testdiff.

Related Changesets

occt: master 6a7d83c4

2013-04-16 09:03:05

kgv

Details Diff
0023904: Multiple warning on Windows x86_64 target concerning WinAPI usage Affected Issues
0023904
mod - src/Draw/CommandWindow.cxx Diff File
mod - src/Draw/Draw_Window.cxx Diff File
mod - src/Draw/Draw_Window.hxx Diff File
mod - src/Draw/MainWindow.cxx Diff File
mod - src/Draw/MAINWINDOW.h Diff File
mod - src/Image/Image_AlienPixMap.cxx Diff File
mod - src/OpenGl/OpenGl_Context.cxx Diff File
mod - src/OpenGl/OpenGl_View_2.cxx Diff File
mod - src/WNT/WNT_Window.cxx Diff File

Issue History

Date Modified Username Field Change
2013-04-16 13:02 kgv New Issue
2013-04-16 13:02 kgv Assigned To => mkv
2013-04-16 13:02 kgv Assigned To mkv => kgv
2013-04-16 13:02 kgv Status new => assigned
2013-04-16 13:04 kgv Note Added: 0024152
2013-04-16 13:04 kgv Assigned To kgv => san
2013-04-16 13:04 kgv Status assigned => resolved
2013-04-16 16:03 san Note Added: 0024161
2013-04-16 16:03 san Assigned To san => bugmaster
2013-04-16 16:03 san Status resolved => reviewed
2013-04-17 18:38 apn Assigned To bugmaster => apn
2013-04-25 16:14 mkv Note Added: 0024276
2013-04-25 16:14 mkv Test case number => Not needed
2013-04-25 16:14 mkv Assigned To apn => bugmaster
2013-04-25 16:14 mkv Status reviewed => tested
2013-04-25 17:29 bugmaster Product Version => 6.6.0
2013-04-25 17:29 bugmaster Target Version => 6.5.4
2013-04-25 17:34 kgv Target Version 6.5.4 => 6.7.0
2013-04-25 17:39 abv Note Added: 0024279
2013-04-26 15:15 bugmaster Status tested => assigned
2013-04-26 15:15 bugmaster Status assigned => resolved
2013-04-26 15:16 bugmaster Note Added: 0024290
2013-04-26 15:16 bugmaster Assigned To bugmaster => mkv
2013-04-26 15:16 bugmaster Status resolved => reviewed
2013-05-21 16:18 mkv Note Added: 0024452
2013-05-21 16:18 mkv Assigned To mkv => bugmaster
2013-05-21 16:18 mkv Status reviewed => tested
2013-05-24 13:06 kgv Changeset attached => occt master 6a7d83c4
2013-05-24 13:06 kgv Assigned To bugmaster => kgv
2013-05-24 13:06 kgv Status tested => verified
2013-05-24 13:06 kgv Resolution open => fixed
2013-07-25 12:55 kgv Relationship added related to 0024088
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:56 bugmaster Fixed in Version => 6.7.0