0023904: Multiple warning on Windows x86_64 target concerning WinAPI usage